Simplify OpenApi spec, fix tests
