# app/test_server.py
@@ -1,12 +1,16 @@
+import datetime
 from unittest.mock import patch
 
 from tma_saml.for_tests.cert_and_key import server_crt
 
 from app.test_app import WpiApiTestApp
+from app.test_focus_service_aanvragen import TestFocusBijstandAanvraag
+from app.test_focus_service_e_aanvraag import example_result
+from app.test_gpass_service import GpassServiceGetStadspas
 from app.utils import encrypt
 
 
-@patch("app.utils.ENABLE_OPENAPI_VALIDATION", False)
+@patch("app.utils.ENABLE_OPENAPI_VALIDATION", True)
 @patch("app.utils.get_tma_certificate", lambda: server_crt)
 class WPITestServer(WpiApiTestApp):
     def test_status_health(self):
@@ -19,32 +23,36 @@ class WPITestServer(WpiApiTestApp):
 
     @patch("app.server.get_aanvragen")
     def test_aanvragen(self, get_aanvragen_mock):
-        get_aanvragen_mock.return_value = ["Aanvragen"]
+        get_aanvragen_mock.return_value = [
+            TestFocusBijstandAanvraag.product_transformed
+        ]
 
         response = self.get_secure("/wpi/uitkering-en-stadspas/aanvragen")
         response_json = response.get_json()
 
         get_aanvragen_mock.assert_called_with(self.TEST_BSN)
 
-        self.assertEqual(response_json["content"], ["Aanvragen"])
+        self.assertEqual(
+            response_json["content"], [TestFocusBijstandAanvraag.product_transformed]
+        )
 
     @patch("app.server.get_e_aanvragen")
-    def test_aanvragen(self, get_e_aanvragen_mock):
-        get_e_aanvragen_mock.return_value = ["Aanvragen"]
+    def test_e_aanvragen(self, get_e_aanvragen_mock):
+        get_e_aanvragen_mock.return_value = example_result
 
         response = self.get_secure("/wpi/e-aanvragen")
         response_json = response.get_json()
 
         get_e_aanvragen_mock.assert_called_with(self.TEST_BSN)
 
-        self.assertEqual(response_json["content"], ["Aanvragen"])
+        self.assertEqual(response_json["content"], example_result)
 
     @patch("app.server.get_document")
     def test_document(self, get_document_mock):
         get_document_mock.return_value = {
             "file_name": "some_document_file_name.pdf",
             "document_content": "document_content_bytes",
-            "mime_type": "mime/testing",
+            "mime_type": "application/pdf",
         }
 
         response = self.get_secure(
@@ -57,17 +65,31 @@ class WPITestServer(WpiApiTestApp):
             response.headers["Content-Disposition"],
             'attachment; filename="some_document_file_name.pdf"',
         )
-        self.assertEqual(response.headers["Content-Type"], "mime/testing")
+        self.assertEqual(response.headers["Content-Type"], "application/pdf")
         self.assertEqual(response.data, b"document_content_bytes")
 
     @patch("app.server.get_jaaropgaven")
     @patch("app.server.get_uitkeringsspecificaties")
     def test_jaaropgaven(self, get_specificaties_mock, get_jaaropgaven_mock):
-        get_specificaties_mock.return_value = ["Uitkeringsspecificaties"]
-        get_jaaropgaven_mock.return_value = ["Jaaropgaven"]
+        def create_specificatie(title, dcteId, date_published):
+            return {
+                "datePublished": date_published.isoformat(),
+                "id": dcteId,
+                "title": f"{title} {date_published.year}",
+                "variant": "",
+                "url": f"http://doc/{dcteId}",
+            }
+
+        specification = create_specificatie(
+            "test1", "1a", datetime.datetime(2020, 1, 5, 0, 0)
+        )
+        get_specificaties_mock.return_value = [specification]
+        jaaropgave = create_specificatie(
+            "test2", "2b", datetime.datetime(2021, 3, 15, 0, 0)
+        )
+        get_jaaropgaven_mock.return_value = [jaaropgave]
 
         response = self.get_secure("/wpi/uitkering/specificaties-en-jaaropgaven")
-
         response_json = response.get_json()
 
         get_jaaropgaven_mock.assert_called_with(self.TEST_BSN)
@@ -75,15 +97,15 @@ class WPITestServer(WpiApiTestApp):
         self.assertEqual(
             response_json["content"],
             {
-                "jaaropgaven": ["Jaaropgaven"],
-                "uitkeringsspecificaties": ["Uitkeringsspecificaties"],
+                "jaaropgaven": [jaaropgave],
+                "uitkeringsspecificaties": [specification],
             },
         )
 
     @patch("app.server.get_stadspas_admin_number")
     @patch("app.server.get_stadspassen")
     def test_stadspassen(self, get_stadspassen_mock, get_stadspas_admin_number_mock):
-        get_stadspassen_mock.return_value = ["Stadspassen"]
+        get_stadspassen_mock.return_value = [GpassServiceGetStadspas.gpass_formatted]
         get_stadspas_admin_number_mock.return_value = {
             "admin_number": "abcdefg123",
             "type": "hoofdpashouder",
@@ -93,7 +115,7 @@ class WPITestServer(WpiApiTestApp):
         response_json = response.get_json()
 
         response_expected = {
-            "stadspassen": ["Stadspassen"],
+            "stadspassen": [GpassServiceGetStadspas.gpass_formatted],
             "ownerType": "hoofdpashouder",
             "adminNumber": "abcdefg123",
         }
@@ -106,7 +128,20 @@ class WPITestServer(WpiApiTestApp):
     )
     @patch("app.server.get_transactions")
     def test_stadspastransactions(self, get_stadspastransactions_mock):
-        get_stadspastransactions_mock.return_value = ["Transacties"]
+        transaction_dummy = {
+            "id": "test",
+            "title": "Budget title",
+            "amount": 50,
+            "datePublished": "2022-02-25T13:55:02.000",
+        }
+        get_stadspastransactions_mock.return_value = [
+            {
+                "id": "test",
+                "title": "Budget title",
+                "amount": 50,
+                "datePublished": "2022-02-25T13:55:02.000",
+            }
+        ]
 
         transactions_key = encrypt("123abc", "abcdefg123", "0009998887777")
 
@@ -117,4 +152,4 @@ class WPITestServer(WpiApiTestApp):
             "abcdefg123", "0009998887777", "123abc"
         )
 
-        self.assertEqual(response_json["content"], ["Transacties"])
+        self.assertEqual(response_json["content"], [transaction_dummy])
